Styled app using tailwind css

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -89,4 +89,4 @@ p {
 .country {
   display: inline;
   padding-right: 10px;
-}
+} */
